--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,13 @@
 @import "tailwindcss";
-@plugin "daisyui";
+@plugin "daisyui" {
+  themes: light --default;
+}
+@plugin "daisyui/theme" {
+  name: "light";
+  default: true;
+  --color-primary: #3b82f6;
+  --color-secondary: #6ee7b7;
+  --color-base-200: #F0F9FF;
+  --color-accent: #f87171;
+  --color-near: #0F172A;
+}
