--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
+
 @import "tailwindcss";
 @plugin "daisyui" {
   themes: light --default;
@@ -10,4 +14,8 @@
   --color-base-200: #F0F9FF;
   --color-accent: #f87171;
   --color-near: #0F172A;
+}
+
+* {
+  font-family: "Poppins", sans-serif;
 }
