--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,13 @@
   --color-near: #0F172A;
 }
 
+@plugin "daisyui" {
+  themes: light --default, dark --prefersdark;
+}
+
+
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
+
 * {
   font-family: "Poppins", sans-serif;
 }
